@@ -23,6 +23,7 @@
 - added permission check approve (goffy)
 - fixed bug for active settings (goffy)
 - restructured admin language file/removed duuplicates (goffy)
+- implementation new xoops_confirm - step 1 (goffy)
 
 <h5>3.03 Alpha 3   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
